--- a/pweb_nuxt/package.json
+++ b/pweb_nuxt/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.9.0",
-    "aos": "^2.3.4"
+    "@pinia/nuxt": "^0.5.1",
+    "aos": "^2.3.4",
+    "pinia": "^2.1.7"
   }
 }
