--- a/pweb_nuxt/package.json
+++ b/pweb_nuxt/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.0.4",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
@@ -19,6 +19,8 @@
     "@nuxt/content": "^2.9.0",
     "@pinia/nuxt": "^0.5.1",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
+    "mdast-util-to-string": "^4.0.0",
     "pinia": "^2.1.7"
   }
 }
